; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_client/extr_deprecated.c_svn_client_root_url_from_path.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_client/extr_deprecated.c_svn_client_root_url_from_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @svn_client_root_url_from_path(i8** %0, i8* %1, i32* %2, i32* %3) #0 {
  %5 = alloca i8**, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  store i8** %0, i8*** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32* %3, i32** %8, align 8
  %11 = load i32*, i32** %8, align 8
  %12 = call i32* @svn_pool_create(i32* %11)
  store i32* %12, i32** %9, align 8
  %13 = load i8*, i8** %6, align 8
  %14 = call i32 @svn_path_is_url(i8* %13)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %21, label %16

16:                                               ; preds = %4
  %17 = load i8*, i8** %6, align 8
  %18 = load i32*, i32** %8, align 8
  %19 = call i32 @svn_dirent_get_absolute(i8** %6, i8* %17, i32* %18)
  %20 = call i32 @SVN_ERR(i32 %19)
  br label %21

21:                                               ; preds = %16, %4
  %22 = load i8**, i8*** %5, align 8
  %23 = load i8*, i8** %6, align 8
  %24 = load i32*, i32** %7, align 8
  %25 = load i32*, i32** %8, align 8
  %26 = load i32*, i32** %9, align 8
  %27 = call i32* @svn_client_get_repos_root(i8** %22, i32* null, i8* %23, i32* %24, i32* %25, i32* %26)
  store i32* %27, i32** %10, align 8
  %28 = load i32*, i32** %9, align 8
  %29 = call i32 @svn_pool_destroy(i32* %28)
  %30 = load i32*, i32** %10, align 8
  %31 = call i32* @svn_error_trace(i32* %30)
  ret i32* %31
}

declare dso_local i32* @svn_pool_create(i32*) #1

declare dso_local i32 @svn_path_is_url(i8*) #1

declare dso_local i32 @SVN_ERR(i32) #1

declare dso_local i32 @svn_dirent_get_absolute(i8**, i8*, i32*) #1

declare dso_local i32* @svn_client_get_repos_root(i8**, i32*, i8*, i32*, i32*, i32*) #1

declare dso_local i32 @svn_pool_destroy(i32*) #1

declare dso_local i32* @svn_error_trace(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
